match function updates

--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -6,7 +6,7 @@
     <link href="/css/style.css" rel="stylesheet">
     <title>Memory Game</title>
   </head>
-      <nav class="clearfix">
+      <nav>
             <ul>
                <li><a href="#">instructions</a></li>
                 <li><a href="#">game</a></li>
