--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -19,7 +19,7 @@
             <h1>match.game</h1>
             <h2>Instructions:</h2>
             <p>
-                Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
+                Welcome to match-dot-game! The memory game with a twist. Click on a card then find it's twin. When you get a match you get +2 points. BUT when you click on two cards who are not matching, you get -1 point. Keep playing until there are no matches left and have fun! :D 
             </p>
 
             <section class="score-board">
