style and timer updates

--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -24,8 +24,14 @@
 
             <section class="score-board">
                 <p>score: <span id="score"></span></p>
-            </section> 
+            </section> <!--/.score-board-->
+            <section class="timer-board">    
+                    <p>timer: <span id="timer"></p></span> 
+            </section> <!--/.timer-board-->
             
+            <section class="reset-button">
+                <p>click   to   reset<span id="reset"></span></p>
+            </section>                        
             </div> <!--/.box-->
 
     	<div id="game-board">
