alter timer and front image for gh-pages

--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -30,7 +30,7 @@
             </section> <!--/.timer-board-->
             
             <section class="reset-button">
-                <p>click   to   reset<span id="reset"></span></p>
+                <p>click <br> to <br> reset<span id="reset"></span></p>
             </section>                        
             </div> <!--/.box-->
 
